<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SignUp.signup_activity">

    <ImageView
            android:background="@mipmap/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_margin="23dp"
    />

    <ImageView
            android:id="@+id/amindset"
            android:background="@mipmap/amindset"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="wrap_content"
            android:layout_margin="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_height="wrap_content"/>

    <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/amindset"
    ></View>

    <TextView android:layout_width="wrap_content"
              android:id="@+id/tv_signin"
              android:text="@string/basic_profile"
              android:textSize="25dp"
              android:textStyle="bold"
              android:textColor="@color/gray"
              android:gravity="center"
              android:layout_height="wrap_content"
              app:layout_constraintTop_toBottomOf="@+id/view"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintHorizontal_bias=".5"
              android:layout_marginTop="30dp"
              app:layout_constraintEnd_toEndOf="parent"
    />

    <EditText android:id="@+id/et_emailaddress"
              style="@style/EditText"
              app:layout_constraintTop_toBottomOf="@+id/tv_signin"
              android:hint="@string/first_name"
              android:layout_margin="30dp"
    />


    <EditText android:id="@+id/et_password"
              app:layout_constraintTop_toBottomOf="@+id/et_emailaddress"
              android:layout_margin="30dp"
              android:hint="@string/last_name"
              style="@style/EditText"/>

    <EditText android:id="@+id/et_repeatpassword"
              app:layout_constraintTop_toBottomOf="@+id/et_password"
              android:layout_margin="30dp"
              android:hint="@string/phone_number"
              style="@style/EditText"/>


    <TextView android:id="@+id/female"
              android:layout_width="93dp"
              android:layout_height="wrap_content"
              android:text="Female"
              android:gravity="center"
              app:layout_constraintStart_toStartOf="parent"
              android:layout_marginLeft="40dp"
              android:layout_marginRight="40dp"
              android:layout_marginTop="20dp"
              app:layout_constraintTop_toBottomOf="@+id/et_repeatpassword"
              style="@style/Button"
    ></TextView>

    <TextView android:id="@+id/male"
              android:layout_width="93dp"
              android:layout_height="wrap_content"
              android:text="Male"
              android:gravity="center"
              android:layout_marginTop="20dp"
              app:layout_constraintStart_toEndOf="@+id/female"
              android:layout_marginLeft="15dp"
              app:layout_constraintTop_toBottomOf="@+id/et_repeatpassword"
              style="@style/Button"
    ></TextView>

    <TextView android:id="@+id/others"
              android:layout_width="93dp"
              android:layout_height="wrap_content"
              android:text="Male"
              android:gravity="center"
              android:layout_marginTop="20dp"
              app:layout_constraintStart_toEndOf="@+id/male"
              android:layout_marginLeft="15dp"
              app:layout_constraintTop_toBottomOf="@+id/et_repeatpassword"
              style="@style/Button"
    ></TextView>

    <TextView android:id="@+id/create_account"
              android:layout_width="150dp"
              android:layout_height="0dp"
              android:text="Create Account"
              android:gravity="center"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              android:layout_marginTop="15dp"
              app:layout_constraintTop_toBottomOf="@+id/others"
              style="@style/Button"
    ></TextView>



</android.support.constraint.ConstraintLayout>