<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
>

    <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_marginBottom="@dimen/_20sdp"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".SignUp.signup_activity">


            <ImageView
                    android:id="@+id/back"
                    android:background="@mipmap/back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:onClick="onClickBackButton"
                    android:layout_margin="23dp"
            />

            <ImageView
                    android:id="@+id/amindset"
                    android:background="@mipmap/amindset"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_width="wrap_content"
                    android:layout_margin="20dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_height="wrap_content"/>

            <View
                    android:id="@+id/view"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray"
                    android:layout_marginTop="20dp"
                    app:layout_constraintTop_toBottomOf="@+id/amindset"
            ></View>

            <TextView android:layout_width="wrap_content"
                      android:id="@+id/tv_signuplebal"
                      android:text="@string/sign_up"
                      android:textSize="25dp"
                      android:textStyle="bold"
                      android:textColor="@color/gray"
                      android:gravity="center"
                      android:layout_height="wrap_content"
                      app:layout_constraintTop_toBottomOf="@+id/view"
                      app:layout_constraintStart_toStartOf="parent"
                      app:layout_constraintHorizontal_bias=".5"
                      android:layout_marginTop="@dimen/_20sdp"
                      app:layout_constraintEnd_toEndOf="parent"
            />

            <TextView android:layout_width="wrap_content"
                      android:id="@+id/tv_subSignuplevel"
                      android:text="@string/enter_your_personal_details"
                      android:textSize="@dimen/_13sdp"
                      android:textColor="@color/black"
                      android:gravity="center"
                      android:layout_height="wrap_content"
                      app:layout_constraintTop_toBottomOf="@+id/tv_signuplebal"
                      app:layout_constraintStart_toStartOf="parent"
                      app:layout_constraintHorizontal_bias=".18"
                      android:layout_marginTop="@dimen/_10sdp"
                      app:layout_constraintEnd_toEndOf="parent"
            />


            <EditText android:id="@+id/et_username"
                      style="@style/EditText"
                      app:layout_constraintTop_toBottomOf="@+id/tv_subSignuplevel"
                      android:hint="First name Last name"
                      android:inputType="textCapWords"
                      android:layout_margin="30dp"
                      tools:ignore="MissingConstraints"/>


            <EditText android:id="@+id/et_createusername"
                      style="@style/EditText"
                      app:layout_constraintTop_toBottomOf="@+id/et_username"
                      android:hint="@string/create_user_name"
                      android:inputType="textCapWords"
                      android:layout_margin="30dp"
                      android:drawableRight="@mipmap/ic_info_provider_signup_document"
                      tools:ignore="MissingConstraints"
            />



            <EditText android:id="@+id/et_userid"
                      app:layout_constraintTop_toBottomOf="@+id/et_createusername"
                      android:layout_margin="30dp"
                      android:hint="Enter email"
                      tools:ignore="MissingConstraints"
                      style="@style/EditText"/>

            <EditText android:id="@+id/et_usernumber"
                      app:layout_constraintTop_toBottomOf="@+id/et_userid"
                      android:layout_margin="30dp"
                      android:hint="@string/enter_number"
                      android:inputType="number"
                      tools:ignore="MissingConstraints"
                      android:maxLength="10"
                      style="@style/EditText"/>

            <EditText android:id="@+id/et_userpassword"
                      app:layout_constraintTop_toBottomOf="@+id/et_usernumber"
                      android:layout_margin="30dp"
                      android:hint="@string/enter_new_password"
                      android:inputType="textPassword"
                      style="@style/EditText"/>


            <TextView android:layout_width="wrap_content"
                      android:id="@+id/tv_health_information"
                      android:text="@string/health_information"
                      android:textSize="@dimen/_13sdp"
                      android:textColor="@color/black"
                      android:gravity="center"
                      android:layout_height="wrap_content"
                      app:layout_constraintTop_toBottomOf="@+id/et_userpassword"
                      app:layout_constraintStart_toStartOf="parent"
                      app:layout_constraintHorizontal_bias=".18"
                      android:layout_marginTop="@dimen/_10sdp"
                      app:layout_constraintEnd_toEndOf="parent"
            />


            <LinearLayout android:layout_width="match_parent"
                          android:id="@+id/ll_main_information"
                          app:layout_constraintTop_toBottomOf="@+id/tv_health_information"
                          android:orientation="vertical"
                          android:layout_height="wrap_content">


                <LinearLayout android:layout_width="match_parent"
                              android:id="@+id/ll_user_information"
                              android:orientation="vertical"
                              android:visibility="gone"
                              android:layout_height="wrap_content">

                    <EditText android:id="@+id/et_date_of_birth"
                              android:layout_marginTop="20dp"
                              android:layout_marginLeft="30dp"
                              android:layout_marginRight="30dp"
                              android:layout_marginBottom="10dp"
                              android:hint="Select date of birth"
                              android:drawableRight="@mipmap/ic_appointment_tab_on"
                              android:onClick="selectUserDate"
                              android:focusable="false"
                              style="@style/EditText"/>

                    <EditText android:id="@+id/et_user_height"
                              android:layout_marginTop="@dimen/_10sdp"
                              android:layout_marginLeft="30dp"
                              android:layout_marginRight="30dp"
                              android:layout_marginBottom="20dp"
                              android:maxLength="5"
                              android:hint="Height in ft and inches(Example 5'7)"
                              style="@style/EditText"/>

                    <RelativeLayout android:layout_width="match_parent"
                                    app:layout_constraintTop_toBottomOf="@+id/et_user_height"
                                    android:id="@+id/rl_user_professional"
                                    android:layout_height="wrap_content">

                        <EditText android:id="@+id/et_user_weight"
                                  android:layout_marginTop="@dimen/_10sdp"
                                  android:layout_marginLeft="30dp"
                                  android:layout_marginRight="30dp"
                                  android:layout_marginBottom="20dp"
                                  android:maxLength="3"
                                  android:hint="Weight in lb"
                                  android:inputType="number"
                                  style="@style/EditText"/>



                    </RelativeLayout>


                </LinearLayout>


                <LinearLayout android:layout_width="match_parent"
                              android:id="@+id/ll_provider_information"
                              app:layout_constraintTop_toBottomOf="@+id/tv_health_information"
                              android:orientation="vertical"
                              android:visibility="gone"
                              android:layout_height="wrap_content">

                    <EditText android:id="@+id/et_proffession_title"
                              android:layout_marginTop="20dp"
                              android:layout_marginLeft="30dp"
                              android:layout_marginRight="30dp"
                              android:layout_marginBottom="10dp"
                              android:hint="@string/hint_profession_title"
                              style="@style/EditText"/>

                    <EditText android:id="@+id/et_provider_exp"
                              android:layout_marginTop="@dimen/_10sdp"
                              android:layout_marginLeft="30dp"
                              android:layout_marginRight="30dp"
                              android:layout_marginBottom="20dp"
                              android:maxLength="2"
                              android:hint="@string/hint_years_of_experience"
                              android:inputType="number"
                              style="@style/EditText"/>

                    <RelativeLayout android:layout_width="match_parent"
                                    app:layout_constraintTop_toBottomOf="@+id/et_provider_exp"
                                    android:id="@+id/rl_selectprofessional"
                                    android:layout_height="wrap_content">

                        <TextView android:id="@+id/et_provider_specialization"
                                  android:layout_margin="@dimen/_30sdp"
                                  android:inputType="number"
                                  android:text=""
                                  android:textColor="@color/black"
                                  android:textSize="@dimen/_14sdp"
                                  android:layout_height="wrap_content"
                                  android:layout_width="match_parent"
                        />

                        <Spinner
                                android:id="@+id/spinner"
                                android:layout_width="@dimen/_20sdp"
                                android:layout_height="40dp"
                                android:layout_marginRight="30dp"
                                android:layout_marginTop="@dimen/_20sdp"
                                style="@style/EditText"
                                android:layout_alignParentRight="true"
                                app:layout_constraintVertical_bias="0.498"/>


                        <View android:layout_width="match_parent"
                              android:id="@+id/view1" android:layout_height="1dp"
                              android:layout_below="@+id/spinner"
                              android:layout_marginLeft="@dimen/_30sdp"
                              android:layout_marginRight="@dimen/_30sdp"
                              android:background="@color/colorPrimary"/>

                    </RelativeLayout>


                </LinearLayout>

            </LinearLayout>


            <TextView android:id="@+id/female"
                      android:layout_width="93dp"
                      android:layout_height="@dimen/_44sdp"
                      android:text="Female"
                      android:gravity="center"
                      app:layout_constraintStart_toStartOf="parent"
                      android:layout_marginLeft="40dp"
                      android:layout_marginRight="40dp"
                      android:layout_marginTop="20dp"
                      android:onClick="onClickFemale"
                      android:background="@drawable/et_corner"
                      app:layout_constraintTop_toBottomOf="@+id/ll_main_information"
            ></TextView>

            <TextView android:id="@+id/male"
                      android:layout_width="93dp"
                      android:layout_height="@dimen/_44sdp"
                      android:text="Male"
                      android:gravity="center"
                      android:layout_marginTop="20dp"
                      app:layout_constraintStart_toEndOf="@+id/female"
                      android:layout_marginLeft="15dp"
                      android:onClick="onClickMale"
                      app:layout_constraintTop_toBottomOf="@+id/ll_main_information"
                      android:background="@drawable/et_corner"
            ></TextView>

            <TextView android:id="@+id/others"
                      android:layout_width="93dp"
                      android:layout_height="@dimen/_44sdp"
                      android:text="Other"
                      android:gravity="center"
                      android:layout_marginTop="20dp"
                      app:layout_constraintStart_toEndOf="@+id/male"
                      android:layout_marginLeft="15dp"
                      android:onClick="onClickOthers"

                      app:layout_constraintTop_toBottomOf="@+id/ll_main_information"
                      android:background="@drawable/et_corner"
            ></TextView>


            <CheckBox android:id="@+id/rules"
                      android:layout_width="318dp"
                      android:layout_height="wrap_content"
                      android:text="I am at least 18 years old agree to AMINDSET term of use, privacy policy and inform consent"
                      android:gravity="center"
                      app:layout_constraintEnd_toEndOf="parent"
                      app:layout_constraintStart_toStartOf="parent"
                      android:layout_marginLeft="40dp"
                      android:layout_marginRight="40dp"
                      android:layout_marginTop="20dp"
                      android:clickable="true"
                      app:layout_constraintTop_toBottomOf="@+id/others"
            ></CheckBox>

            <TextView android:id="@+id/create_account"
                      android:layout_width="150dp"
                      android:layout_height="0dp"
                      android:text="Next "
                      android:gravity="center"
                      app:layout_constraintEnd_toEndOf="parent"
                      app:layout_constraintStart_toStartOf="parent"
                      android:layout_marginTop="25dp"
                      android:onClick="onNextClick"
                      app:layout_constraintTop_toBottomOf="@+id/rules"
                      android:layout_marginBottom="@dimen/_20sdp"
                      style="@style/Button"
            ></TextView>

            <TextView
                    android:id="@+id/tv_alreadyy"
                    android:layout_width="@dimen/_250sdp"
                    android:text="Already have an account? Sign In"
                    style="@style/EditText"
                    app:layout_constraintTop_toBottomOf="@+id/create_account"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="20dp"
                    android:padding="14dp"
                    android:gravity="right"
                    android:onClick="OnClickAlreadySingin"
                    android:textColor="@color/colorPrimary"
                    android:layout_height="wrap_content"/>

        </android.support.constraint.ConstraintLayout>

    </android.support.v4.widget.NestedScrollView>


</layout>